--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'monserrat';
+    src: url('./font/Montserrat/static/Montserrat-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'nunito';
+    src: url('./font/Nunito/static/Nunito-Regular.ttf');
+}
+@font-face {
+    font-family: 'dancing';
+    src: url('./font/dancing/static/DancingScript-Regular.ttf');
+}
