--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,17 @@
     font-family: 'dancing';
     src: url('./font/dancing/static/DancingScript-Regular.ttf');
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    max-width: 1440px;
+    /* background-color: ; */
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+}
