done with the header and the cotent area moving on to the carousel

--- a/src/App.css
+++ b/src/App.css
@@ -3,29 +3,29 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'monserrat';
-    src: url('./font/Montserrat/static/Montserrat-Regular.ttf');
+  font-family: "monserrat";
+  src: url("./font/Montserrat/static/Montserrat-Regular.ttf");
 }
 
 @font-face {
-    font-family: 'nunito';
-    src: url('./font/Nunito/static/Nunito-Regular.ttf');
+  font-family: "nunito";
+  src: url("./font/Nunito/static/Nunito-Regular.ttf");
 }
 @font-face {
-    font-family: 'dancing';
-    src: url('./font/dancing/static/DancingScript-Regular.ttf');
+  font-family: "dancing";
+  src: url("./font/dancing/static/DancingScript-Regular.ttf");
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    max-width: 1440px;
-    /* background-color: ; */
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
 }
+
